# IC

./: README.md
Projeto1/sndfile-example-bin/: decoder  encoder  wav_cmp  wav_effects  wav_hist  wav_quant
Projeto1/sndfile-example-src/: BitStream.cpp  BitStream.h  BitStream.hpp  CMakeLists.txt  SIDE_channel.txt  decoder.cpp  encoder.cpp  hist.txt  wav_cmp.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
Projeto2/opencv-example-bin/: cp_image  ex1  ex2  ex2a  ex2b  ex2c  ex2d  testAudioCodec  testGolomb  testImageCodec
Projeto2/opencv-example-src/: AudioCodec.cpp  AudioCodec.h  BitStream.h  CMakeLists.txt  Golomb.cpp  Golomb.h  ImageCodec.h  cp_image.cpp  ex1.cpp  ex2.cpp  ex2a.cpp  ex2b.cpp  ex2c.cpp  ex2d.cpp  testAudioCodec.cpp  testGolomb.cpp
Projeto2/opencv-example-src/tests/: testAudioCodec.cpp  testAudioCoded  testBitstream.cpp  testGolomb.cpp  testImageCodec.cpp
Projeto3/: fcm  fcm.h  findlang.cpp  lang.cpp  test  test.cpp
Projeto3/fcm-example-bin/: fcm_test  findlang  lang  locatelang
Projeto3/fcm-example-src/: CMakeLists.txt  Fcm.h  Makefile  fcm_test.cpp  findlang.cpp  lang.cpp  locatelang.cpp
Projeto3/fcm-example-src/textos/: eng.txt  fin.txt  fr.txt  ger.txt  locatelang.txt  pol.txt  pt.txt  simples.txt  teste.txt
Projeto3/textos/: dutch.txt  esp.txt  ita.txt
